@@ -21,7 +21,6 @@ GCODE_URL = "https://media.prusaprinters.org/media/prints/27216/gcodes/" + \
             "272161_a9977cd4-cc70-4fb3-8d09-276a023b132d/" + \
             "cam_clip_3_015mm_pla_mk3s_2h13m.gcode"
 DST = '/sdcard/my_example.gcode'
-TYPE = const.TransferType.FROM_WEB
 
 
 @responses.activate
@@ -65,9 +64,9 @@ def test_download_ok(download_mgr, gcode):
     assert download_mgr.transfer.type == \
            const.TransferType.NO_TRANSFER
     transfer = download_mgr.transfer
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=False)
     run_test_loop(download_mgr)
@@ -84,13 +83,16 @@ def test_download_ok(download_mgr, gcode):
 
 
 def test_optional_download(gcode, download_mgr):
-    download_mgr.start(TYPE, DST)
+    download_mgr.start(const.TransferType.FROM_WEB, DST)
+
+    assert download_mgr.transfer.path
+    assert download_mgr.transfer.in_progress
 
 
 def test_download_to_print(gcode, download_mgr):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=True,
                        to_select=False)
     assert download_mgr.transfer.to_print is True
@@ -98,9 +100,9 @@ def test_download_to_print(gcode, download_mgr):
 
 
 def test_download_to_select(gcode, download_mgr):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=True)
     assert download_mgr.transfer.to_select is True
@@ -108,9 +110,9 @@ def test_download_to_select(gcode, download_mgr):
 
 
 def test_download_time_remaining(gcode, download_mgr):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=False)
     transfer = download_mgr.transfer
@@ -122,9 +124,9 @@ def test_download_time_remaining(gcode, download_mgr):
 
 
 def test_download_stop(gcode, download_mgr):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=False)
     transfer = download_mgr.transfer
@@ -135,9 +137,9 @@ def test_download_stop(gcode, download_mgr):
 
 
 def test_download_info(gcode, download_mgr):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=True)
     download_mgr.BUFFER_SIZE = 1
@@ -161,9 +163,9 @@ def test_download_info(gcode, download_mgr):
 def test_download_from_connect_server_has_token(printer, download_mgr):
     url = printer.server + "/path/here"
     responses.add(responses.GET, url, status=200)
-    download_mgr.start(TYPE,
-                       url,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       url,
                        to_print=False,
                        to_select=True)
     run_test_loop(download_mgr)
@@ -174,9 +176,9 @@ def test_download_from_connect_server_has_token(printer, download_mgr):
 def test_download_no_token(download_mgr):
     url = "http://somewhere.else/path"
     responses.add(responses.GET, url, status=200)
-    download_mgr.start(TYPE,
-                       url,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       url,
                        to_print=False,
                        to_select=True)
     run_test_loop(download_mgr)
@@ -184,9 +186,9 @@ def test_download_no_token(download_mgr):
 
 
 def test_telemetry_sends_download_info(printer, gcode, download_mgr):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=True,
                        to_select=False)
     download_mgr.BUFFER_SIZE = 1
@@ -222,9 +224,9 @@ def test_printed_file_cb(download_mgr, printer):
     printer.queue.get_nowait()  # MEDIUM_INSERTED from mounting `tmp`
     download_mgr.printed_file_cb = lambda: \
         os.path.abspath(download_mgr.os_path)
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=False)
     run_test_loop(download_mgr, unset_stop=True)
@@ -236,16 +238,16 @@ def test_printed_file_cb(download_mgr, printer):
 
 def test_download_twice_in_a_row(gcode, download_mgr, printer):
     printer.queue.get_nowait()  # MEDIUM_INSERTED from mounting `tmp`
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=True,
                        to_select=False)
     run_test_loop(download_mgr, timeout=1)
 
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=True,
                        to_select=False)
     run_test_loop(download_mgr, timeout=1)
@@ -257,9 +259,9 @@ def test_download_twice_in_a_row(gcode, download_mgr, printer):
 
 
 def test_download_throttle(download_mgr, gcode):
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=False)
 
@@ -272,7 +274,7 @@ def test_download_throttle(download_mgr, gcode):
 
 def test_destination_not_abs(download_mgr):
     with pytest.raises(ValueError):
-        download_mgr.start(TYPE,
+        download_mgr.start(const.TransferType.FROM_WEB,
                            GCODE_URL,
                            'output.gcode',
                            to_print=False,
@@ -295,9 +297,9 @@ def test_download_finished_cb(download_mgr, printer):
 
     download_mgr.download_finished_cb = download_finished_cb
 
-    download_mgr.start(TYPE,
-                       GCODE_URL,
+    download_mgr.start(const.TransferType.FROM_WEB,
                        DST,
+                       GCODE_URL,
                        to_print=False,
                        to_select=True)
     run_test_loop(download_mgr, timeout=2)
